--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "lib/logger"]
 	path = lib/logger
 	url = git@github.com:coding-cpp/logger
+[submodule "lib/brewtils"]
+	path = lib/brewtils
+	url = git@github.com:coding-cpp/brewtils
+[submodule "lib/json"]
+	path = lib/json
+	url = git@github.com:coding-cpp/json
