add support for zipping entire folders

--- a/docker/decrypt.compose.yaml
+++ b/docker/decrypt.compose.yaml
@@ -14,5 +14,6 @@ services:
     volumes:
       - ../files:/files
     environment:
-      INPUT_FILE: 'output.mp4'
       MODE: '1'
+      INPUT_PATH: '/files/output.mp4'
+      OUTPUT_DIR: '/files'
